Fixed gateway response bug
