# gateway/swagger_server/controllers/trip_controller.py
@@ -19,7 +19,7 @@ def add_trip(body=None):
     :rtype: str
     """
     response = requests.post(f"{trips_url}/trip", data=connexion.request.get_json())
-    return response
+    return response.json(), response.status_code
 
 
 def remove_trip(trip_id):
@@ -31,7 +31,7 @@ def remove_trip(trip_id):
     :rtype: None
     """
     response = requests.delete(f"{trips_url}/trip/{trip_id}")
-    return response
+    return response.json(), response.status_code
 
 
 def update_trip(trip_id, body=None):
@@ -45,4 +45,9 @@ def update_trip(trip_id, body=None):
     :rtype: str
     """
     response = requests.put(f"{trips_url}/trip/{trip_id}", data=connexion.request.get_json())
-    return response
+    return response.json(), response.status_code
+
+
+def get_location_by_id(location_id):
+    response = requests.get(f"{trips_url}/trip/location/{location_id}", data=connexion.request.get_json())
+    return response.json(), response.status_code
